tests/comp/sem/invalid/return_void_from_int.mj
class A {

	/*** public int test(A foo) { return; } ***/

	public static void main(String[] args) {
	}

}
